// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct with collapsed false 1`] = `
<div
  className="logo"
>
  <img
    alt="logo"
    className="img"
    src="logo.png"
  />
  <span
    className="ant-typography title"
    style={
      Object {
        "WebkitLineClamp": null,
      }
    }
  >
    <strong>
      БИЗНЕС РЕСУРС
    </strong>
  </span>
</div>
`;

exports[`render correct with collapsed true 1`] = `
<div
  className="logo"
>
  <img
    alt="logo"
    className="img"
    src="logo.png"
  />
  <span
    className="ant-typography title collapsed"
    style={
      Object {
        "WebkitLineClamp": null,
      }
    }
  >
    <strong>
      БИЗНЕС РЕСУРС
    </strong>
  </span>
</div>
`;
